--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
 		<spring.version>5.1.2.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		<sonar.host.url>http:44.203.52.137:9000/</sonar.host.url>
+		<sonar.host.url>http://44.211.93.20:9000/</sonar.host.url>
 		<sonar.login>admin</sonar.login>
 		<sonar.password>admin</sonar.password> 
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -95,20 +95,18 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>Landmark Technologies Releases Nexus Repository</name>
-	      <url>http://34.239.151.19:8081/repository/tesla-webapps-releases/</url>
+	      <url>http://35.175.187.246:8081/repository/tesla-webapps-releases/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>Landmark Technologies Snapshot Nexus Repository </name>
-	      <url>http://34.239.151.19:8081/repository/tesla-webapp-snapshot/</url>
+	      <url>http://35.175.187.246:8081/repository/tesla-webapp-snapshot/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
 	
-	
-        
-        
+
 	<build>
 		<finalName>tesla</finalName>
 		
